dbeaver/pro#8733 Query filters management